2005-05-16  Nate Nielsen  <nielsen@memberwebs.com>

	* smb-method.c 
	(lookup_user_cache, initial_authentication, prompt_authentication): 
	Fix problems with prompting for authentication twice. 
	Patch by Narayana Pattipati. Fixes bug #172695.
	
2005-05-16  Tor Lillqvist  <tml@novell.com>

	* libgnomevfs/gnome-vfs-uri.c (gnome_vfs_uri_new): On Win32, use
	gnome_vfs_escape_path_string() on file: URIs to replace
	backslashes with slashes etc.

	* modules/file-method.c (do_open, do_create): Use binary mode on
	Win32.
	(do_remove_directory, do_find_directory, rename_helper): Use gstdio
	wrappers here, too.
	
2005-05-12  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-mime.c:
	(_gnome_vfs_get_mime_type_internal):
	Implement mime subclassing lookup. 
	Should fix bug #171595.

2005-05-10  Christian Neumair  <chris@gnome-de.org>

	* schemas/system_dns_sd.schemas.in:
	Minor string fixes.
	Fixes bug #149523.

2005-05-09  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-private-utils.c:
	(_gnome_vfs_url_show_using_handler_with_env):
	Properly expand "%s" occuring in arguments. 
	Fixes bug #302992.

2005-05-09  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory):
	Restore preservation of atime, mtime and permissions broken
	by the setgid directories patch. 
	Fixes bug #303470.

2005-05-08  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-cdrom.c: (_gnome_vfs_get_cdrom_type):
	Default to CDS_NO_INFO on any not sepcially handled system.
	Fixes bug #171495. Oath From Michael Banck <mbanck@debian.org>.

2005-05-08  Christian Kellner  <gicmo@gnome.org>

	* configure.in: Check for sem_wait in -lsem
	* libgnomevfs/gnome-vfs-cdrom.c: (_gnome_vfs_get_cdrom_type):
	* libgnomevfs/gnome-vfs-volume-ops.c: (mount_unmount_thread):
	* modules/cdda-method.c:
	Build fixes for GNU/k*BSD. Fixes bug #150568.
	Patch from Robert Millan <rmh@debian.org>.

2005-05-08  Christian Kellner  <gicmo@gnome.org>
