@@ -1,3 +1,10 @@
+2005-05-22  Christian Kellner  <gicmo@gnome.org>
+
+	* libgnomevfs/gnome-vfs-module-shared.c:
+	(gnome_vfs_get_special_mime_type): Use the
+	GnomeVFSFileInfo struct properly.
+	Should fix bug #168557.
+	
 2005-05-16  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* smb-method.c 
